<?xml version="1.0"?>
<package format="2">
  <name>simple_navigation_goals</name>
  <version>0.0.0</version>
  <description>The simple_navigation_goals package</description>
  <maintainer email="dlf2034@163.com">dlf</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>scan_map_icp</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>scan_map_icp</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>


  </export>
</package>
